crates/lexer/src/tests/snapshots/let_int64.snap
---
source: crates/lexer/src/tests.rs
assertion_line: 120
expression: "(test[1], tokens)"
---
- "let b: int64 = 3"
- Ok:
    - tt: Let
      line: 1
      column: 1
    - tt:
        Ident: b
      line: 1
      column: 5
    - tt: Colon
      line: 1
      column: 6
    - tt:
        VarType: Int64
      line: 1
      column: 8
    - tt:
        Op: Assign
      line: 1
      column: 14
    - tt:
        Num: "3"
      line: 1
      column: 16
    - tt:
        Semicolon: true
      line: 1
      column: 17

