crates/lexer/src/tests/snapshots/let_uint64.snap
---
source: crates/lexer/src/tests.rs
assertion_line: 120
expression: "(test[1], tokens)"
---
- "let b: uint64 = 6"
- Ok:
    - tt: Let
      line: 1
      column: 1
    - tt:
        Ident: b
      line: 1
      column: 5
    - tt: Colon
      line: 1
      column: 6
    - tt:
        VarType: UInt64
      line: 1
      column: 8
    - tt:
        Op: Assign
      line: 1
      column: 15
    - tt:
        Num: "6"
      line: 1
      column: 17
    - tt:
        Semicolon: true
      line: 1
      column: 18

