crates/lexer/src/tests/snapshots/logical_ops_eq.snap
---
source: crates/lexer/src/tests.rs
assertion_line: 101
expression: "(test[1], tokens)"
---
- x == y
- Ok:
    - tt:
        Ident: x
      line: 1
      column: 1
    - tt:
        Op: Eq
      line: 1
      column: 3
    - tt:
        Ident: y
      line: 1
      column: 6
    - tt:
        Semicolon: true
      line: 1
      column: 7

